# real-time-financial-market-simulator

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
market_simulator/: __init__.py  constants.py  gbm.py  utils.py  websocket_server.py
market_simulator/dashboard/: __init__.py  streamlit_app.py
market_simulator/data/: __init__.py  alpha_vantage.py
market_simulator/tests/: __init__.py  test_gbm.py  test_strategies.py
market_simulator/tests/dashboard/: test_streamlit_app.py
market_simulator/trading/: __init__.py  backtester.py  strategies.py
